syntax = "proto3";

package drp.object.v1;

import "google/protobuf/struct.proto";

// Supposed to be the RIBLT stuff
message Vertex {
  message Operation {
    string drp_type = 1;
    string op_type = 2;
    google.protobuf.Value value = 3;
  }
  string hash = 1;
  string peer_id = 2;
  Operation operation = 3;
  repeated string dependencies = 4;
  int64 timestamp = 5;
  bytes signature = 6;
}

message DRPObjectBase {
  string id = 1;
  optional string abi = 2;
  optional bytes bytecode = 3;
  repeated Vertex vertices = 4;
}
