syntax = "proto3";
package drp.v1;

import "drp/v1/object.proto";

enum MessageType {
  MESSAGE_TYPE_UNSPECIFIED = 0;
  MESSAGE_TYPE_FETCH_ROOT_VERTEX = 1;
  MESSAGE_TYPE_FETCH_ROOT_VERTEX_RESPONSE = 2;
  MESSAGE_TYPE_UPDATE = 3;
  MESSAGE_TYPE_SYNC = 4;
  MESSAGE_TYPE_SYNC_ACCEPT = 5;
  MESSAGE_TYPE_SYNC_REJECT = 6;
  MESSAGE_TYPE_ATTESTATION_UPDATE = 7;
  MESSAGE_TYPE_CUSTOM = 8;
  MESSAGE_TYPE_DRP_DISCOVERY = 9;
  MESSAGE_TYPE_DRP_DISCOVERY_RESPONSE = 10;
}

message Message {
  string sender = 1;
  MessageType type = 2;
  bytes data = 3;
  string object_id = 4;
}

message FetchRootVertexResponse {
  drp.v1.Vertex rootVertex = 1;
}

message Update {
  repeated drp.v1.Vertex vertices = 1;
  repeated drp.v1.Attestation attestations = 2;
}

message AttestationUpdate {
  repeated drp.v1.Attestation attestations = 1;
}

message Sync {
  repeated string vertex_hashes = 1;
}

message SyncAccept {
  repeated drp.v1.Vertex requested = 1;
  repeated drp.v1.AggregatedAttestation attestations = 2;
  repeated string requesting = 3;
}

message SyncReject {}

message DRPDiscovery {}

message DRPDiscoveryResponse {
  message Subscribers {
    repeated string multiaddrs = 1;
  }
  map<string, Subscribers> subscribers = 1;
}
